@@ -2335,3 +2335,6 @@ Pushed_citations_to_TeXstudio=Pushed_citations_to_TeXstudio
 Unable_to_connect_to_freecite_online_service.=Unable_to_connect_to_FreeCite_online_service.
 Parse_with_FreeCite=Parse_with_FreeCite
 Insert_selected_citations_into_TeXstudio=Insert_selected_citations_into_TeXstudio
+The_current_BibTeX_key_will_be_overwritten._Continue?=The_current_BibTeX_key_will_be_overwritten._Continue?
+Overwrite_key=Overwrite_key
+Not_overwriting_existing_key._To_change_this_setting,_open_Options_->_Prefererences_->_BibTeX_key_generator=Not_overwriting_existing_key._To_change_this_setting,_open_Options_->_Prefererences_->_BibTeX_key_generator
