@@ -1,4 +1,5 @@
 [master branch]
+    - Generate key action in entry editor now honours key overwrite settings.
     - Fixed bug when importing XMP data from PDF, file will now be linked from the new entry.
     - Fixed bug in layout processing - quoted formatter argments are now handled correctly.
     - Fixed bug 3545394: null and curly brackets in custom export filter.
